--- a/index.html
+++ b/index.html
@@ -23,17 +23,6 @@
     </header>
 
     <main>
-        <div id="content">
-            <div id="head">
-                <form action="https://duckduckgo.com/">
-                    <label for="q" autofocus>> find / </label>
-                    <input type="text" name="q" autocomplete="off">
-                </form>
-                <div id="info">
-                    <p id="weatherDesc">Loading...</p>
-                    <p id="temp">Loading...</p>
-                </div>
-            </div>
             <div id="links">
                 <section>
                     <h3>social</h3>
@@ -75,7 +64,7 @@
         </div>
     </main>
     <footer>
-        <a href="https://github.com/eaaasun/startpage">Github</a>
+        <p><a href="https://github.com/ThePilotBoi/startpage">github</a></p>
     </footer>
     <script type="module">
         if (animated) {
